--- a/NetworkRoutingSimulator/NetworkRoutingSimulator/NetworkRoutingSimulator.csproj
+++ b/NetworkRoutingSimulator/NetworkRoutingSimulator/NetworkRoutingSimulator.csproj
@@ -76,6 +76,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ConnectionEdge.cs" />
+    <Compile Include="NetworkPacket.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="RouterVertex.cs" />
     <Compile Include="RoutingGraph.cs" />
